# WinCE_Emulator3

./: .gitignore  Cargo.toml  DEVICE_MEMORY_REFERENCE.md  KNOWN_BUGS.md  PLAN.MD  PROGRESS.md  README.md  RULES.md  SOURCE_REFERENCES.md  TODO.md  coredll.map  mounts.toml  registry.reg  regs.json  serial_devices.json
.github/workflows/: rust.yml
host_client/: App.xaml  CeRemote.csproj  MainWindow.xaml  MainWindow.xaml.cs  VncClient.cs  app.manifest
host_progs/: agent.cpp  cdx_drv.cpp  cmd.cpp  dyn_resolve_helper.cpp  dyn_resolve_helper.h  easy_iNavi.cpp  keyboard.cpp  mini_ftp.cpp  rfb_server.cpp  snip.cpp  taskmgr.cpp  usb_mode_selector.cpp
host_progs/ceremote/: App.xaml.cs  CeRemote.csproj  FileClient.cs
scripts/: generate_coredll_ordinals.ps1  hv_viewer.py
src/: config.rs  error.rs  lib.rs  main.rs  remote_server.rs  winsock.rs
src/ce/: audio.rs  cemath.rs  com.rs  coredll.rs  coredll_ordinals.rs  crt.rs  desktop.rs  devices.rs  file.rs  framebuffer.rs  gwe.rs  hangul.rs  kernel.rs  keybd.rs  linux_x11_desktop.rs  memory.rs  mod.rs  nled.rs  object.rs  ole.rs  registry.rs  remote.rs  resource.rs  scheduler.rs  shell.rs  thread.rs  timer.rs  win32_desktop.rs
src/emulator/: arch.rs  cpu.rs  cpu_arm.rs  cpu_mips.rs  dll_search.rs  imports.rs  memory.rs  mod.rs  pe_loader.rs  stub.rs  types.rs  unicorn.rs
src/pe/: mod.rs
tests/: basic_subsystems.rs  coredll_dispatch.rs  coredll_raw_gwe.rs  coredll_raw_kernel.rs  coredll_raw_memory_file.rs  coredll_raw_waveout.rs  fixture_exes.rs  host_progs.rs  ioctl_discovery.cpp
tests/support/: mod.rs
tests/test_progs/: README.md
(+239 files in other folders)
