[package]
name = "wince_emulation_v3"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
unicorn-engine = { version = "2", optional = true }

[features]
default = []
unicorn = ["dep:unicorn-engine"]
